
2020-04-17  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed compile warnings
	* fisam.c: Fixed sync/commit routine 
	* fbdb.c: Fixed I/O routine pointers

2020-04-14  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to NOT mix I/O to FILE * via putc and 'int fd' via write
	            'FILE *' is buffered and 'int fd' is NOT so the data
				can end up in a very strange sequence in the file

2020-04-14  Ron Norman <rjn@inglenet.com>

	* common.h: Add fields for implementing LINE SEQUENTIAL pipes
	* fileio.c: Add code for LINE SEQUENTIAL pipes

2020-03-28  Ron Norman <rjn@inglenet.com>

	* sysdefines.h: Add COB_MAX_CHAR_SIZE, Largest 'static char' 
			supported by the C compiler

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c, common.h: define and use COB_FILE_MODE for _WIN32 and
	  COB_OPEN_TEMPORARY for all other environments
	* fileio.c (cob_write): removed io-status 49 as it only applies to
	  REWRITE and DELETE

2020-02-15  Ron Norman <rjn@inglenet.com>
	* common.h, fileio.c, fileio.h, foci.c, fodbc.c, fsqlxfd.c:
		Updates to support RELATIVE file for processing by
		the OCI/ODBC I/O modules.
		A 'RELATIVE" table has a column called 'rid_tablename'
		which is PRIMARY KEY.
		As much code as possible was moved into fileio.c to
		manage the logical 'record number' so that foci.c & fodbc.c
		do not need to duplicate that logic

2020-02-13  Ron Norman <rjn@inglenet.com>
	* fsqlxfd.c: Call cob_xfd_to_ddl if 'create_table' was 'true'
				and table.ddl is not present
	* common.c,fileio.h,coblocal.h: Updates for 'create_table'
	* foci.c, fodbc.c: Pick up 'create_table' option
	* fileio.c: Use cob_dictionary_path if defined

2020-02-12  Ron Norman <rjn@inglenet.com>
	* fsqlxfd.c: Adding cob_xfd_to_ddl routine
	* common.h,fileio.h: Updates for cob_xfd_to_ddl
	* foci.c, fodbc.c: Add checks for Table not defined

2020-02-05  Ron Norman <rjn@inglenet.com>
	* common.h: cob_file and cob_file_key updated